update our detail

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>Nuchana Kittitrakul</h1>
+        <h1 class='masthead-heading'>Nuchana Johnson</h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
-      <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am a marketer who wants to build a new skill in web development</p>
+      <h1>Where I'm From </h1>
+      <p>Bangkok, Thailand</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Tennis </p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Travel author</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Greenwich, CT</p>
       <h1>Why do you want to be a web developer?</h1>
       <p>Details here...</p>
     </section>
